Fix contribution other firefox alignment

--- a/app/assets/stylesheets/pages/profile_page.sass
+++ b/app/assets/stylesheets/pages/profile_page.sass
@@ -2124,6 +2124,16 @@
       margin-bottom: 15px
       max-width: 500px
       text-align: center
+      .contribute-value
+        margin: -15px 0 0
+        .custom-amount
+          position: relative
+          top: 16px
+          input[type='radio']
+            position: relative
+            top: 12px
+          input
+            float: left
       .error.limit
         @include border-radius(5px)
         background-color: #faf258
